--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
 
     <!-- my CSS -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style_sheet.css">
 
 
 </head>
@@ -35,9 +35,6 @@
     <div class="jumbotron">
         <div class="container">
             <h1>Earthquake Visualization</h1>
-            <p>The map below shows the earthquake data over the last 7 days.  Color and size of the circles correspond
-                to the magnitude of the earthquake.  Click the circles for additional information.  
-            </p>
         </div>
     </div>
 
